update dashboard charts api
