# app/app.go
@@ -1,6 +1,8 @@
 package app
 
 import (
+	"net/http"
+
 	"github.com/hyacinthus/xbdar/app/handler"
 	"github.com/hyacinthus/xbdar/app/model"
 	"github.com/hyacinthus/xbdar/app/utils/xerr"
@@ -45,17 +47,32 @@ func initEcho(e *echo.Echo, debug bool, config *Config) {
 	e.HTTPErrorHandler = xerr.ErrorHandler
 
 	e.Use(middleware.Logger())
+	e.Pre(middleware.RemoveTrailingSlash())
 	e.Use(middleware.Recover())
 	e.Use(middleware.CORS())
-	e.Use(xpage.Middleware(config.PageSize))
+
+	xpageMiddleware := xpage.Middleware(config.PageSize)
 
 	// routes
+	// app
+	e.GET("/status", getStatus)
+
+	dashboards := e.Group("/dashboards")
+	charts := e.Group("/charts")
 	// dashboard
-	e.GET("/dashboards", handler.GetDashboards)
-	e.GET("/dashboards/:id", handler.GetDashboard)
+	dashboards.GET("", handler.GetDashboards)
+	dashboards.GET("/:id", handler.GetDashboard)
+	dashboards.GET("/:id/charts", handler.GetDashboardCharts, xpageMiddleware)
+	dashboards.GET("/:id/charts/:chart_id", handler.GetDashboardChart)
+	dashboards.GET("/:id/charts/:chart_id/data", handler.GetDashboardChartData)
 
 	// chart
-	e.GET("/charts", handler.GetCharts)
-	e.GET("/charts/:id", handler.GetChart)
-	e.GET("/charts/:id/data", handler.FetchChartData)
+	charts.GET("", handler.GetCharts, xpageMiddleware)
+	charts.GET("/:id", handler.GetChart)
+	charts.GET("/:id/data", handler.FetchChartData)
+}
+
+// API状态 成功204 失败500
+func getStatus(c echo.Context) error {
+	return c.NoContent(http.StatusNoContent)
 }
