# app/model/chart.go
@@ -7,15 +7,16 @@ import (
 // Chart 图表
 type Chart struct {
 	model.Entity
-	Name             string       `json:"name" gorm:"type:varchar(128);not null" example:"基础折线图"`
-	Type             string       `json:"type" gorm:"type:varchar(30);not null" example:"line"`
-	DatasourceDomain string       `json:"datasource_domain" gorm:"type:varchar(20);not null" example:"db"`
-	DatasourceType   string       `json:"datasource_type" gorm:"type:varchar(20);not null" example:"mysql"`
-	Datasource       *Datasource  `json:"datasource,omitempty" gorm:"ForeignKey:DatasourceID"`
-	DatasourceID     string       `json:"datasource_id" gorm:"type:varchar(20);not null" example:"xxxx"`
-	DataParamJSON    JSONObject   `json:"data_param_json" gorm:"type:text;not null"`
-	ChartParamJSON   JSONObject   `json:"chart_param_json" gorm:"type:text;not null"`
-	Dashboards       []*Dashboard `json:"dashboards,omitempty" gorm:"many2many:dashboard_charts"`
+	Name             string            `json:"name" gorm:"type:varchar(128);not null" example:"基础折线图"`
+	Type             string            `json:"type" gorm:"type:varchar(30);not null" example:"line"`
+	DatasourceDomain string            `json:"datasource_domain" gorm:"type:varchar(20);not null" example:"db"`
+	DatasourceType   string            `json:"datasource_type" gorm:"type:varchar(20);not null" example:"mysql"`
+	Datasource       *Datasource       `json:"datasource,omitempty" gorm:"ForeignKey:DatasourceID"`
+	DatasourceID     string            `json:"datasource_id" gorm:"type:varchar(20);not null" example:"xxxx"`
+	DataParamJSON    JSONObject        `json:"data_param_json" gorm:"type:text;not null"`
+	ChartParamJSON   JSONObject        `json:"chart_param_json" gorm:"type:text;not null"`
+	Dashboards       []*Dashboard      `json:"dashboards,omitempty" gorm:"many2many:dashboard_charts"`
+	ChartDashboards  []*DashboardChart `json:"chart_dashboards,omitempty" gorm:"ForeignKey:ChartID"`
 }
 
 // services
