# app/model/dashboard.go
@@ -7,16 +7,31 @@ import (
 // Dashboard 报表
 type Dashboard struct {
 	model.Entity
-	Key        *string      `json:"key" gorm:"type:varchar(64);index"`
-	Title      string       `json:"title" gorm:"type:varchar(128);not null"`
-	LayoutJSON JSONObject   `json:"layout_json" gorm:"type:text;not null"`
-	Children   []*Dashboard `json:"children,omitempty" gorm:"ForeignKey:ParentID"`
-	ParentID   *string      `json:"parent_id" gorm:"type:varchar(20)"`
-	Parent     *Dashboard   `json:"parent,omitempty" gorm:"ForeignKey:ParentID"`
-	Order      int          `json:"order" gorm:"type:samllint;default:0"`
-	Charts     []*Chart     `json:"charts,omitempty" gorm:"many2many:dashboard_charts"`
+	Key             *string           `json:"key" gorm:"type:varchar(64);index"`
+	Title           string            `json:"title" gorm:"type:varchar(128);not null"`
+	LayoutJSON      JSONObject        `json:"layout_json" gorm:"type:text;not null"`
+	Children        []*Dashboard      `json:"children,omitempty" gorm:"ForeignKey:ParentID"`
+	ParentID        *string           `json:"parent_id" gorm:"type:varchar(20)"`
+	Parent          *Dashboard        `json:"parent,omitempty" gorm:"ForeignKey:ParentID"`
+	Order           int               `json:"order" gorm:"type:samllint;default:0"`
+	Charts          []*Chart          `json:"charts,omitempty" gorm:"many2many:dashboard_charts"`
+	DashboardCharts []*DashboardChart `json:"dashboard_charts,omitempty" gorm:"ForeignKey:DashboardID"`
 }
-// TODO: 在dashboard_charts中添加覆盖chart中的数据和图表参数
+
+// DashboardChart 报表-图表关联表
+type DashboardChart struct {
+	model.Entity
+	Dashboard     *Dashboard `json:"dashboard" gorm:"ForeighKey:DashboardID"`
+	DashboardID   string     `json:"dashboard_id" gorm:"type:varchar(20);primary_key"`
+	Chart         *Chart     `json:"chart" gorm:"Foreign:ChartID"`
+	ChartID       string     `json:"chart_id" gorm:"type:varchar(20);primary_key"`
+	DataParamJSON JSONObject `json:"data_param_json" gorm:"type:text"`
+}
+
+// TableName set the gorm model table name.
+func (*DashboardChart) TableName() string {
+	return "dashboard_charts"
+}
 
 // services
 
@@ -41,7 +56,7 @@ func GetDashboardByID(id string) (*Dashboard, error) {
 
 func fetchDashboardChildren(d *Dashboard) error {
 	d.Children = make([]*Dashboard, 0)
-	if err := db.Model(&Dashboard{}).Where("parent_id = ?", d.ID).Find(&d.Children).Error; err != nil {
+	if err := db.Model(&Dashboard{}).Where("parent_id=?", d.ID).Find(&d.Children).Error; err != nil {
 		return err
 	}
 	// TODO: 并行获取
@@ -51,4 +66,16 @@ func fetchDashboardChildren(d *Dashboard) error {
 		}
 	}
 	return nil
+}
+
+// GetDashboardCharts 分页获取报表chart信息
+func GetDashboardCharts(dashboardID string, page, perPage int) (*Pagination, error) {
+	dashboardCharts := make([]DashboardChart, 0)
+	return Paginate(db.Model(&DashboardChart{}).Preload("Chart").Where("dashboard_id=?", dashboardID).Order("id"), page, perPage, &dashboardCharts)
+}
+
+// GetDashboardChartByID 通过id获取报表-图表信息
+func GetDashboardChartByID(dashboardID, chartID string) (*DashboardChart, error) {
+	dashboardChart := new(DashboardChart)
+	return dashboardChart, db.Preload("Chart").Where("dashboard_id=?", dashboardID).Where("chart_id=?", chartID).Find(dashboardChart).Error
 }
